kustomize/common-namespaces-combined-dataplane/choreo-analytics/netpol/query-api-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: choreo-analytics-query-api
spec:
  podSelector:
    matchLabels:
      app: choreo-analytics-query-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: env-choreo-analytics-internal-nginx-ingress
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - port: 8443
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
